<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/black"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/inputValue"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            android:background="@color/black"
            android:inputType="number"
            android:maxLines="1"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold|normal" />
        <EditText
            android:id="@+id/outputValue"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            android:background="@color/black"
            android:inputType="number"
            android:maxLines="1"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/grey"
            android:textSize="45sp"
            android:textStyle="bold|normal" />
        <View
            android:alpha=".5"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:layout_gravity="center"
            >

            <Button
                android:id="@+id/clear"
                android:onClick="clearAll"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:paddingTop="11dp"
                android:paddingBottom="11dp"
                android:text="@string/clearButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:backgroundTint="@color/red"
                app:shapeAppearanceOverlay="@style/button"/>
            <Button
                android:id="@+id/delete"
                android:onClick="delete"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:paddingTop="11dp"
                android:paddingBottom="11dp"
                android:text="@string/deleteButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:backgroundTint="@color/yellow"
                app:shapeAppearanceOverlay="@style/button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:shrinkColumns="*"
                android:stretchColumns="*"
                android:background="@color/white"
                android:layout_marginTop="24dp">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    >

                    <Button
                        android:id="@+id/divide"
                        android:onClick="calculatorOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/divideSign"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/green"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />
                    <Button
                        android:id="@+id/multiply"
                        android:onClick="calculatorOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/multiplySign"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/green"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />
                    <Button
                        android:id="@+id/plus"
                        android:onClick="calculatorOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/plusSign"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/green"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />
                    <Button
                        android:id="@+id/minus"
                        android:onClick="calculatorOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/minusSign"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/green"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />

                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/six"
                        android:onClick="numberOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/_6"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/violet"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />
                    <Button
                        android:id="@+id/seven"
                        android:onClick="numberOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/_7"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/violet"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />
                    <Button
                        android:id="@+id/eight"
                        android:onClick="numberOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/_8"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/violet"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />
                    <Button
                        android:id="@+id/nine"
                        android:onClick="numberOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/_9"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/violet"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />

                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/two"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="5dp"
                        android:layout_span="1"
                        android:onClick="numberOperator"
                        android:text="@string/_2"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/violet"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp" />
                    <Button
                        android:id="@+id/three"
                        android:onClick="numberOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/_3"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/violet"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />
                    <Button
                        android:id="@+id/four"
                        android:onClick="numberOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/_4"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/violet"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />
                    <Button
                        android:id="@+id/five"
                        android:onClick="numberOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/_5"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/violet"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />

                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/one"
                        android:onClick="numberOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/_1"
                        android:layout_margin="4dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/violet"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />
                    <Button
                        android:id="@+id/zero"
                        android:onClick="numberOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/_0"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/violet"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />
                    <Button
                        android:id="@+id/dot"
                        android:onClick="dotOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/dotSign"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/grey"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/grey"
                        app:strokeWidth="1dp"
                        />
                    <Button
                        android:id="@+id/equal"
                        android:onClick="equalOperator"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_span="1"
                        android:text="@string/equalSign"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="normal|bold"
                        app:backgroundTint="@color/green"
                        app:shapeAppearanceOverlay="@style/button2"
                        app:strokeColor="@color/yellow"
                        app:strokeWidth="1dp"
                        />

                </TableRow>

            </TableLayout>

        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>